Application works but needs memory optimization.
JPSThumbnailAnnotation seems to overload cpu

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ DARPFlickrAroundYou/DARPFlickrAroundYou.xcodeproj/xcuserdata/darth.xcuserdatad/x
 DARPFlickrAroundYou/DARPFlickrAroundYou.xcodeproj/project.xcworkspace/xcuserdata/darth.xcuserdatad/UserInterfaceState.xcuserstate
 
 DARPFlickrAroundYou/DARPFlickrAroundYou.xcodeproj/project.xcworkspace/xcshareddata/DARPFlickrAroundYou.xccheckout
+
+DARPFlickrAroundYou/DARPFlickrAroundYou.xcworkspace/xcuserdata/darth.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
