WIP: Bug fixing

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ DARPFlickrAroundYou/DARPFlickrAroundYou.xcodeproj/project.xcworkspace/xcuserdata
 DARPFlickrAroundYou/DARPFlickrAroundYou.xcodeproj/project.xcworkspace/xcshareddata/DARPFlickrAroundYou.xccheckout
 
 DARPFlickrAroundYou/DARPFlickrAroundYou.xcworkspace/xcuserdata/darth.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+DARPFlickrAroundYou/DARPFlickrAroundYou/API-Keys.plist
+
+DARPFlickrAroundYou/Pods/Pods.xcodeproj/xcuserdata/darth.xcuserdatad/xcschemes/xcschememanagement.plist
+
+DARPFlickrAroundYou/Pods/Pods.xcodeproj/xcuserdata/darth.xcuserdatad/xcschemes/xcschememanagement.plist
